# NBCACHE

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: bump-version.yml
src/nbcache/: __init__.py  _colab.py  cache.py  detectors.py  utils.py
tests/: test_nbcache.py
